--- a/src/components/hoverImage.css
+++ b/src/components/hoverImage.css
@@ -33,13 +33,11 @@ html,body { height: 90%; margin: 0px; padding: 0px; }
     opacity: 0.3;
     top: 15%;
     right: 3%;
-}
-.markedItem{
-  
+    cursor: pointer;
 }
 .centerDiv {
     background-color: #ffffff;
-    width: 95%;
+    width: 100%;
     height: 90%;
     overflow: auto;
     margin: 0 auto;
@@ -69,54 +67,20 @@ html.modal-active, body.modal-active {
   transform: scale(0);
   z-index: 1;
 }
-#modal-container.one {
+#modal-container.modalWindow {
   transform: scaleY(0.01) scaleX(0);
   animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
-#modal-container.one .modal-background .modal {
+#modal-container.modalWindow .modal-background .modal {
   transform: scale(0);
   animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
-#modal-container.one.out {
+#modal-container.modalWindow.out {
   transform: scale(1);
   animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
-#modal-container.one.out .modal-background .modal {
+#modal-container.modalWindow.out .modal-background .modal {
   animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six {
-  transform: scale(1);
-}
-#modal-container.six .modal-background {
-  background: rgba(0, 0, 0, .0);
-  animation: fadeIn 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six .modal-background .modal {
-  background-color: transparent;
-  animation: modalFadeIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six .modal-background .modal h2, #modal-container.six .modal-background .modal p {
-  opacity: 0;
-  position: relative;
-  animation: modalContentFadeIn 0.5s 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six .modal-background .modal .modal-svg rect {
-  animation: sketchIn 0.5s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six.out {
-  animation: quickScaleDown 0s 0.5s linear forwards;
-}
-#modal-container.six.out .modal-background {
-  animation: fadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six.out .modal-background .modal {
-  animation: modalFadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six.out .modal-background .modal h2, #modal-container.six.out .modal-background .modal p {
-  animation: modalContentFadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-}
-#modal-container.six.out .modal-background .modal .modal-svg rect {
-  animation: sketchOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 #modal-container .modal-background {
   display: table-cell;
@@ -143,55 +107,6 @@ html.modal-active, body.modal-active {
 #modal-container .modal-background .modal p {
   font-size: 18px;
   line-height: 22px;
-}
-#modal-container .modal-background .modal .modal-svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 90%;
-  border-radius: 3px;
-}
-#modal-container .modal-background .modal .modal-svg rect {
-  stroke: #fff;
-  stroke-width: 2px;
-  stroke-dasharray: 778;
-  stroke-dashoffset: 778;
-}
-.content {
-  min-height: 100%;
-  height: 100%;
-  background: white;
-  position: relative;
-  z-index: 0;
-}
-.content h1 {
-  padding: 75px 0 30px 0;
-  text-align: center;
-  font-size: 30px;
-  line-height: 30px;
-}
-.content .buttons {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-}
-.content .buttons .button {
-  display: inline-block;
-  text-align: center;
-  padding: 10px 15px;
-  margin: 10px;
-  background: red;
-  font-size: 18px;
-  background-color: #efefef;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
-  cursor: pointer;
-}
-.content .buttons .button:hover {
-  color: white;
-  background: #009bd5;
 }
 @keyframes unfoldIn {
   0% {
