--- a/src/components/ModalStyling.css
+++ b/src/components/ModalStyling.css
@@ -10,6 +10,23 @@ html, body {
   html.modal-active, body.modal-active {
     overflow: hidden;
   }
+  .closeButton{
+    position: fixed;
+    top: 10%;
+    right: 10px;
+    padding: 1% 5%;
+    color: white;
+    background-color: #333;
+    border-radius: 3px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    z-index: 1000;
+  }
+  .closeButton:hover{
+    color: #333;
+    background-color: white;
+  }
   #modal-container {
     position: fixed;
     display: table;
