--- a/src/components/ModalStyling.css
+++ b/src/components/ModalStyling.css
@@ -18,6 +18,7 @@ html, body {
     color: white;
     background-color: #333;
     border-radius: 3px;
+    opacity: 0.3;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -26,6 +27,45 @@ html, body {
   .closeButton:hover{
     color: #333;
     background-color: white;
+    opacity: 1;
+  }
+  .arrowRightButton{
+    position: fixed;
+    top: 40%;
+    right: 10px;
+    padding: 5% 1%;
+    color: white;
+    background-color: #333;
+    border-radius: 3px;
+    opacity: 0.3;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    z-index: 1000;
+  }
+  .arrowRightButton:hover{
+    color: #333;
+    background-color: white;
+    opacity: 1;
+  }
+  .arrowLeftButton{
+    position: fixed;
+    top: 40%;
+    left: 10px;
+    padding: 5% 1%;
+    color: white;
+    background-color: #333;
+    border-radius: 3px;
+    opacity: 0.3;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    z-index: 1000;
+  }
+  .arrowLeftButton:hover{
+    color: #333;
+    background-color: white;
+    opacity: 1;
   }
   #modal-container {
     position: fixed;
