--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -31,3 +31,36 @@ ul {
     background-color: #111;
     cursor: pointer;
   }
+  input[type=text] {
+    padding: 2px 25px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  select {
+    padding: 1px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  .submitButton{
+    padding: 2px 5px;
+    margin: 2px 5px;
+    color: white;
+    background-color: #333;
+    border-radius: 3px;
+    opacity: 0.3;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    z-index: 1000;
+  }
+  .submitButton:hover{
+    color: #333;
+    background-color: white;
+    opacity: 1;
+  }
